Fixed alignment of columns/Detailed styling

--- a/app/assets/stylesheets/shortners.scss
+++ b/app/assets/stylesheets/shortners.scss
@@ -30,15 +30,19 @@ td{
   border-bottom: 1px rgba(51,51,51,0.1) solid;
   padding-right: 10px;
 }
+
 td.longurl-link {
   font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif !important;
-  font-size: 12px;
-  padding: 10px 0px 10px 20px;
+  font-size: 16px;
+  // padding: 10px 0px 10px 20px;
 }
 td.shorturl-link {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif !important;
   font-size: 16px;
-  padding: 5px 0px 20px 20px;
+  // padding: 5px 0px 20px 20px;
   text-align: center;
 }
 
